--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
 
     
-    <div class="ab                                                                                                                 
+    <div class="ab">                                                                                                                
       <h1>About Me</h1>
       <p>I am a front-end web developer.I can provide clean code and pixel perfect design.</p>
       <p>I also make the website more amd more attractive with web animations.</p>
