--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h3>hello, It's me</h3>
       <h1>Rhoda Njeri</h1> 
       <h3>And I'm a</h3>
-      <P>I'm a Web Designer with extensive experience for or over 3 years.
+      <P class="more">I'm a Web Designer with extensive experience for or over 3 years.
         <br>expertiseis to create and website design, and
       <div class="Home-sci">
         <a href="#"><i class='bx bxl-facebook'></i></a>
