--- a/about.html
+++ b/about.html
@@ -23,16 +23,16 @@
     
     <div class="ab">                                                                                                                
       <h1>About Me</h1>
-      <p>I am a front-end web developer.I can provide clean code and pixel perfect design.</p>
-      <p>I also make the website more amd more attractive with web animations.</p>
-      <p>A responsive design makes your website accessible to all users regardless of their device.</p>
+      <p style="color:black";>I am a front-end web developer.I can provide clean code and pixel perfect design.</p>
+     <p style="color:black"; >I also make the website more amd more attractive with web animations.</p>
+      <p style="color:black";>A responsive design makes your website accessible to all users regardless of their device.</p>
       
 
       <h2>Attractive Websites</h2>
-      <p>If u design it becomes more appealing.</p>
-      <p>Are you looking for one?</p>
-      <p>You can reachly find me on my contact page.</p>
-      <p>You will absolutely appreciatemy work.</p>
+      <p style="color:black";>If u design it becomes more appealing.</p>
+      <p style="color:black";>Are you looking for one?</p>
+      <p style="color:black";>You can reachly find me on my contact page.</p>
+      <p style="color:black";>You will absolutely appreciatemy work.</p>
 
 
 
