--- a/skill.html
+++ b/skill.html
@@ -23,14 +23,14 @@
     
     <div class="content">
       <h1>My Skills.</h1>
-      <p> I am very confident with my work.</p>
-      <p>Patience and attentiveness.</p>
-      <p>I am very passionate.</p>
-      <p>I love teamwork.</p>
-      <p>clear communication skills.</p>
-      <p>Time management skills.</p>
-      <p>Customer satisfaction and great expectations</p>
-      <p>Excellent knowledge of a variety programming languages eg SQL,C++,C,Java and Javascript.</p>
+      <p style="color:black";> I am very confident with my work.</p>
+     <p style="color:black"; >Patience and attentiveness.</p>
+     <p style="color:black"; >I am very passionate.</p>
+      <p style="color:black";>I love teamwork.</p>
+     <p style="color:black"; >clear communication skills.</p>
+<p style="color:black";>Time management skills.</p>
+      <p style="color:black";>Customer satisfaction and great expectations</p>
+      <p style="color:black";>Excellent knowledge of a variety programming languages eg SQL,C++,C,Java and Javascript.</p>
     </div>
 
 
