fixed navigation button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         
         <nav class="navbar">
-            <a href="./" class="active-link" >Home</a>
+            <a href="./" class="active-link">About</a>>Home</a>
             <a href="about.html" >About</a>
             <a href="skill.html" >Skill</a>
             <a href="contact.html" >Contact</a>
@@ -24,13 +24,9 @@
       <h3>And I'm a</h3>
       <P class="more">I'm a Web Designer with extensive experience for or over 3 years.
         <br>expertiseis to create and website design, and
-      <div class="Home-sci">
-        <a href="#"><i class='bx bxl-facebook'></i></a>
-        <a href="#"><i class='bx bxl-instagram'></i></a>
-        <a href="#"><i class='bx bxl-tiktok'></i></a>    
-        <a href="#"><box-icon type='logo' name='whatsapp'></box-icon>
-        </div>
-        <a href="#" class="btn-box">More About Me</a>
+        <nav class="navbar">
+        <a href="#" class="active-link>More About Me</a>
+      </nav>
     </Section>
 <table style="width: 100%;">
   <tr>
