fixed navigation bar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <P class="more">I'm a Web Designer with extensive experience for or over 3 years.
         <br>expertiseis to create and website design, and
         <nav class="navbar">
-        <a href="#" class="active-link>More About Me</a>
+        <a href="about.html" class="active-link">More About Me</a>
       </nav>
     </Section>
 <table style="width: 100%;">
