--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         
         <nav class="navbar">
-            <a href="./" class="active-link">About</a>>Home</a>
+            <a href="./" class="active-link">Home</a>
             <a href="about.html" >About</a>
             <a href="skill.html" >Skill</a>
             <a href="contact.html" >Contact</a>
