--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <h1>Rhoda Njeri</h1> 
       <h3>And I'm a</h3>
       <P class="more">I'm a Web Designer with extensive experience for or over 3 years.
-        <br>expertiseis to create and website design, and
+        <br>expertiseis to create and website design, and <p style="color:purple";
         <nav class="navbar">
-        <a href="about.html" class="active-link">More About Me</a>
+        <a href="about.html" class="active-link">More About Me</a><p style="color:blueviolet";
       </nav>
     </Section>
 <table style="width: 100%;">
