--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <h3>hello, It's me</h3>
       <h1>Rhoda Njeri</h1> 
       <h3>And I'm a</h3>
-      <P class="more">I'm a Web Designer with extensive experience for or over 3 years.
-        <br>expertiseis to create and website design, and <p style="color:purple";
+      <p style="color:purple";<P class="more">I'm a Web Designer with extensive experience for or over 3 years.
+        <br>expertiseis to create and website design, and 
         <nav class="navbar">
-        <a href="about.html" class="active-link">More About Me</a><p style="color:blueviolet";
+          <p style="color:blueviolet";<a href="about.html" class="active-link">More About Me</a>
       </nav>
     </Section>
 <table style="width: 100%;">
