--- a/skill.html
+++ b/skill.html
@@ -32,7 +32,22 @@
       <p style="color:black";>Customer satisfaction and great expectations</p>
       <p style="color:black";>Excellent knowledge of a variety programming languages eg SQL,C++,C,Java and Javascript.</p>
     </div>
+    <h2>My Skills.</h2>
 
+    <ul>
+      <li>I am very confident with my work.</li>
+      <li>Patience and attentiveness.</li>
+      <li>I am very passionate.</li>
+      <li>I love teamwork.</li>
+      <li>Clear communication skills.</li>
+      <li>Time management skills.</li>
+      <li>Customer satisfaction and great expectations.</li>
+      <li>Excellent knowledge of a variety programming languages eg SQL,C++,C,Java and Javascript  </li>                         
+      
+      </ul>
+
+
+    
 
       </body>
 
@@ -42,4 +57,4 @@
         <a URL="mailto:thiongorhoda@gmail.com">thiongorhoda@gmail.com</a></p>
       </footer>
 </body>
-</html>
+</html>                                                                           
