--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
       </body>
 
       <footer>
-      <p>Author: Rhoda Refsnes<br>
+      <p>Author: Rhoda Thiong'o<br>
         <a URL="mailto:thiongorhoda@gmail.com">thiongorhoda@gmail.com</a></p>
       </footer>
 </body>
