--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
 
     <footer>
-        <p>Author: Rhoda Refsnes<br>
+        <p>Author: Rhoda Thiong'o<br>
         <a URL="mailto:thiongorhoda@gmail.com">thiongorhoda@gmail.com</a></p>
       </footer>
 </body>
